<resources>
    <string name="app_name">CAH</string>
    <string name="title_activity_login">Sign in</string>
    <!--<string name="username">default_67</string>-->
    <string name="username">Username</string>
    <string name="game_name">Game Name</string>
    <string name="register">Register</string>
    <string name="password"> Password</string>
    <string name="game_password">Game Password</string>
    <string name="lobby_password">Lobby Password</string>
    <string name="login_here">Login here</string>
    <string name="register_here">Register here</string>
    <string name="user_reg_header">User Registration</string>
    <string name="cards_against_humanity_header">Cards Against Humanity</string>
    <string name="account_exists_text">Have an account already?</string>
    <string name="no_account_text">Don\'t have an account? Sign up</string>
    <string name="back_to_main">Back to Main Menu</string>
    <string name="search">Search</string>
    <string name="find_a_game">Find a Game</string>
    <string name="host_a_game">Host a Game</string>
    <string name="create_lobby">Create Lobby</string>
    <string name="name_of_lobby">Name of Lobby</string>
    <string name="make_the_game_private_switch">Make the game private?</string>
    <string name="public_switch">Public</string>
    <string name="private_switch">Private</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="login">Login</string>
    <string name="user_login">User Login</string>
    <string name="players">Players</string>
    <string name="player_ready">Ready</string>
    <string name="start_game">Start Game</string>
    <string name="leave_lobby">Leave Lobby</string>
    <string name="game_lobby">Game Lobby</string>
    <string name="host">Host</string>
</resources>
