<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.willoleary6gmail.cah.loginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:inputType="textPersonName"
        android:theme="@style/Theme.App.Base"
        android:background="@color/white"
        android:ems="10"
        android:id="@+id/Username"
        android:hint="@string/username"
        android:layout_marginBottom="14dp"
        android:layout_above="@+id/Password"
        android:layout_alignStart="@+id/Password"
        android:layout_alignEnd="@+id/Password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:theme="@style/Theme.App.Base"
        android:inputType="textPassword"
        android:background="@color/white"
        android:ems="10"
        android:id="@+id/Password"
        android:hint="@string/password"
        android:layout_marginBottom="14dp"
        android:layout_above="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_alignEnd="@+id/button2" />

    <TextView
        android:text="@string/register_here"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:background="@drawable/button_border"
        android:id="@+id/tvRegisterHere"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/login"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.App.Base"
        android:background="@drawable/button_border"
        android:id="@+id/button2"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_width="300dp"
        android:layout_marginBottom="25dp"
        android:layout_above="@+id/noAccount"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/logHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_login"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_below="@+id/cahHeader"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/cahHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="45sp"
        android:text="@string/cards_against_humanity_header"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/noAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:text="@string/no_account_text"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/tvRegisterHere"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
