<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.willoleary6gmail.cah.Settings">
    <Button
        android:text="@string/back_to_main"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:id="@+id/button"
        android:background="@drawable/button_border"
        android:layout_below="@+id/logOutButton"
        android:layout_alignStart="@+id/logOutButton" />

    <TextView
        android:text="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settingHeader"
        android:textSize="45sp"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/log_out"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:id="@+id/logOutButton"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:background="@drawable/button_border"
        tools:text="Log out"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
